fvm_dispatch/helper/tests/naming/non-capital-start.stderr
error: proc macro panicked
 --> tests/naming/non-capital-start.rs:5:18
  |
5 |     let _str_hash = method_hash!("noPlaceForCamelCase");
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: invalid method name: IllegalName(NotCapitalStart)
